# dolphin-plugin-owncloud

./: .gitignore  CMakeLists.txt  README.md  fileviewowncloudplugin.cpp  fileviewowncloudplugin.desktop  fileviewowncloudplugin.h
